# easylogger_linux

./: CMakeLists.txt  Readme.md
easylogger/inc/: elog_cfg.h  elog_file_cfg.h
easylogger/src/: elog.c
user/src/: main.c
